--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -1,66 +1,75 @@
 {
-    "name": "GabonNews",
-    "short_name": "GabonNews",
-    "description": "Agrégateur d'actualités gabonaises alimenté par IA",
+    "name": "ANTIA.GA - Actualités Gabonaises",
+    "short_name": "ANTIA.GA",
+    "description": "Toute l'actualité gabonaise en temps réel, propulsée par l'IA",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#16a34a",
+    "theme_color": "#009E60",
     "orientation": "portrait-primary",
     "icons": [
         {
             "src": "/icons/icon-72x72.png",
             "sizes": "72x72",
-            "type": "image/png",
-            "purpose": "maskable any"
+            "type": "image/png"
         },
         {
             "src": "/icons/icon-96x96.png",
             "sizes": "96x96",
-            "type": "image/png",
-            "purpose": "maskable any"
+            "type": "image/png"
         },
         {
             "src": "/icons/icon-128x128.png",
             "sizes": "128x128",
-            "type": "image/png",
-            "purpose": "maskable any"
+            "type": "image/png"
         },
         {
             "src": "/icons/icon-144x144.png",
             "sizes": "144x144",
-            "type": "image/png",
-            "purpose": "maskable any"
+            "type": "image/png"
         },
         {
             "src": "/icons/icon-152x152.png",
             "sizes": "152x152",
-            "type": "image/png",
-            "purpose": "maskable any"
+            "type": "image/png"
         },
         {
             "src": "/icons/icon-192x192.png",
             "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable any"
+            "type": "image/png"
         },
         {
             "src": "/icons/icon-384x384.png",
             "sizes": "384x384",
-            "type": "image/png",
-            "purpose": "maskable any"
+            "type": "image/png"
         },
         {
             "src": "/icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png",
-            "purpose": "maskable any"
+            "purpose": "any maskable"
+        }
+    ],
+    "shortcuts": [
+        {
+            "name": "Politique",
+            "url": "/categorie/politique",
+            "description": "Actualités politiques gabonaises"
+        },
+        {
+            "name": "Sport",
+            "url": "/categorie/sport",
+            "description": "Actualités sportives"
+        },
+        {
+            "name": "Économie",
+            "url": "/categorie/economie",
+            "description": "Actualités économiques"
         }
     ],
     "categories": [
         "news",
-        "education"
+        "lifestyle"
     ],
-    "lang": "fr",
-    "dir": "ltr"
+    "lang": "fr-GA"
 }
